# algorithm-visualizer

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: main.py  pyproject.toml
backend/app/: main.py
backend/app/algorithms/: metadata.py  sorting.py  types.py
backend/app/algorithms/backtracking/: __init__.py  maze_solver.py  n_queens.py  permutations.py  subsets.py  sudoku_solver.py  types.py
backend/app/algorithms/dynamic_programming/: __init__.py  coin_change.py  edit_distance.py  fibonacci.py  knapsack.py  longest_common_subsequence.py  types.py  unique_paths.py
backend/app/algorithms/graph/: __init__.py  a_star.py  breadth_first_search.py  depth_first_search.py  dijkstra.py  kruskal.py  prim.py  topological_sort.py  types.py  utils.py
backend/app/algorithms/searching/: __init__.py  binary_search.py  linear_search.py
backend/app/algorithms/sorting/: __init__.py  bubble_sort.py  cocktail_shaker_sort.py  comb_sort.py  counting_sort.py  gnome_sort.py  heap_sort.py  insertion_sort.py  merge_sort.py  quick_sort.py  selection_sort.py  shell_sort.py
backend/app/algorithms/trees/: __init__.py  binary_search_tree.py  types.py
backend/tests/: test_api.py  test_backtracking.py  test_dynamic_programming.py  test_graph.py  test_metadata.py  test_searching.py  test_sorting.py  test_trees.py
frontend/: README.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: algorithm-metadata-panel.tsx  algorithm-visualizer.tsx  array-bars.tsx  backtracking-grid.tsx  backtracking-list-visualizer.tsx  backtracking-visualizer.tsx  (+15 more)
(+13 files in other folders)
