[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
pythonpath = ["."]
